add: search by level route & page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GoDocs documentation theme</title>
+    <title>Down Dog Yoga</title>
 
     <!-- mobile responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -55,7 +55,9 @@
                 <div class="navbar-start ml-auto">
                     <a class="navbar-item" href="/">Home</a>
                     <a class="navbar-item" href="/categories">Categories</a>
-                    <a class="navbar-item" href="/search">Search Page</a>
+                    <a class="navbar-item" href="/search-level">Levels</a>
+                    <a class="navbar-item" href="/search">Search </a>
+
                 </div>
 
                 <div class="navbar-end ml-0">
@@ -71,7 +73,7 @@
     <%- body %>
         <!-- /call to action -->
 
-        <footer>
+        <!-- <footer>
             <div class="container">
                 <div class="columns is-multiline is-align-items-center border-bottom py-5">
                     <div class="column is-4-desktop is-12-tablet">
@@ -103,7 +105,7 @@
                             href="https://themefisher.com">themefisher</a></small>
                 </div>
             </div>
-        </footer>
+        </footer> -->
 
         <!-- plugins -->
         <script src="/plugins/jQuery/jquery.min.js"></script>
