--- a/views/poses.ejs
+++ b/views/poses.ejs
@@ -11,7 +11,7 @@
                             <% poses.forEach((pose)=> { %>
                                 <li class="sidelist">
                                     <a href="/poses/<%= pose.id %>">
-                                        <%= pose.english_name %>
+                                        <%= pose.english_name %> Pose
                                     </a>
                                 </li>
                                 <% }); %>
