--- a/views/search-level.ejs
+++ b/views/search-level.ejs
@@ -2,10 +2,11 @@
     <div class="container py-5 h-100">
         <div class=" columns is-desktop is-justify-content-center">
             <div class="column is-8-desktop">
-                <div class="card bg-white text-black" style="border-radius: 1rem; shadow rounded content">
+                <div class="card bg-white text-black" style="border-radius: 1rem">
                     <div class="card-body p-5 text-center">
-                        <h2 class="section-title">Search</h2>
-                        <form method="POST" action="/search/level">
+
+                        <h2 class="section-title">Search by Level</h2>
+                        <form method="POST" action="/search-level">
                             <div class="columns is-multiline">
                                 <br>
                                 <div class="form-group column is-12">
