update: read me, last styling changes, attempt to 'add to favorites button'

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -19,10 +19,10 @@
                             </ul>
                     </li>
                     <li class="sidelist">
-                        <a href="/categories">Categories</a>
+                        <a href="/poses">Poses</a>
                     </li>
                     <li class="sidelist">
-                        <a href="/poses">Poses</a>
+                        <a href="/search-level">Level</a>
                     </li>
                 </ul>
             </div>
