--- a/views/category.ejs
+++ b/views/category.ejs
@@ -23,6 +23,9 @@
                     <li class="sidelist">
                         <a href="/poses">Poses</a>
                     </li>
+                    <li class="sidelist">
+                        <a href="/search-level">Level</a>
+                    </li>
                 </ul>
             </div>
 
