--- a/views/poses-by-level.ejs
+++ b/views/poses-by-level.ejs
@@ -24,7 +24,7 @@
                         <a href="/poses">Poses</a>
                     </li>
                     <li class="sidelist">
-                        <a href="/search-level">Levels</a>
+                        <a href="/search-level">Level</a>
                     </li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
                                 <div class="card-content">
                                     <div class="content">
                                         <p><img src="<%= pose.url_png %>" alt="<%= pose.english_name %>"
-                                                style="margin-left: 125px;" width="500" height="500"></p>
+                                                style="margin-left: 140px;" width="500" height="500"></p>
                                         <h4><strong><a href="/poses/<%= pose.id %>">
                                                     <%= pose.english_name %> Pose
                                                 </a></strong></h4>
