--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -2,40 +2,40 @@
   <div class="container py-5 h-100">
     <div class="columns is-desktop is-align-items-center is-justify-content-center">
       <div class="column is-8-desktop">
-        <div class="card bg-white text-black" style="border-radius: 1rem;"">
+        <div class="card bg-white text-black" style="border-radius: 1rem;">
           <div class=" card-body p-5 text-center has-text-centered">
 
-          <div class="mb-md-5 mt-md-4 pb-5">
+            <div class="mb-md-5 mt-md-4 pb-5">
 
-            <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-            <p class="text-black-50 mb-5">Please enter your login and password!</p>
-            <form action="/auth/login" method="POST">
+              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+              <p class="text-black-50 mb-5">Please enter your login and password!</p>
+              <form action="/auth/login" method="POST">
 
-              <div class="form-outline form-black mb-4">
-                <input type="email" id="typeEmailX" class="form-control form-control-lg" name="email" />
-                <label class="form-label" for="typeEmailX">Email</label>
-              </div>
+                <div class="form-outline form-black mb-4">
+                  <input type="email" id="typeEmailX" class="form-control form-control-lg" name="email" />
+                  <label class="form-label" for="typeEmailX">Email</label>
+                </div>
 
-              <div class="form-outline form-black mb-4">
-                <input type="password" id="typePasswordX" name="password" class="form-control form-control-lg" />
-                <label class="form-label" for="typePasswordX">Password</label>
-              </div>
+                <div class="form-outline form-black mb-4">
+                  <input type="password" id="typePasswordX" name="password" class="form-control form-control-lg" />
+                  <label class="form-label" for="typePasswordX">Password</label>
+                </div>
 
-              <p class="small mb-5 pb-lg-2"><a class="text-black-50" href="#!">Forgot password?</a></p>
+                <p class="small mb-5 pb-lg-2"><a class="text-black-50" href="#!">Forgot password?</a></p>
 
-              <button class="btn btn-primary btn-lg px-5" type="submit">Login</button>
+                <button class="btn btn-primary btn-lg px-5" type="submit">Login</button>
 
 
+
+            </div>
+
+            <div>
+              <p class="mb-0">Don't have an account? <a href="/auth/signup" class="text-black-50 fw-bold">Sign Up</a>
+              </p>
+            </div>
 
           </div>
-
-          <div>
-            <p class="mb-0">Don't have an account? <a href="/auth/signup" class="text-black-50 fw-bold">Sign Up</a>
-            </p>
-          </div>
-
         </div>
       </div>
     </div>
-  </div>
   </div>
