--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -55,7 +55,7 @@
                 <div class="navbar-start ml-auto">
                     <a class="navbar-item" href="/">Home</a>
                     <a class="navbar-item" href="/categories">Categories</a>
-                    <a class="navbar-item" href="/search-level">Levels</a>
+                    <a class="navbar-item" href="/search-level">Level</a>
                     <a class="navbar-item" href="/search">Search </a>
 
                 </div>
