--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
     <div class="container py-5 h-100">
         <div class="columns is-desktop is-align-items-center is-justify-content-center">
             <div class="column is-8-desktop">
-                <div class="card bg-white text-black" style="border-radius: 1rem; shadow rounded content">
+                <div class="card bg-white text-black" style="border-radius: 1rem;">
                     <div class="card-body p-5 text-center has-text-centered">
 
                         <h2 class="section-title">Welcome to Down Dog Yoga</h2>
